[package]
name = "dead-api"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "*"
borsh = "*"
borsh-derive = "*"
coal-utils = "*"
spl-token = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
thiserror = "*"
zeroize = "*"
libc = "*"

[package.metadata.winres]
subsystem = "console"
