[package]
name = "Deadlock-net-dioxus-app"
version = "0.1.0"
authors = ["deadsg"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dioxus = { version = "*", features = ["desktop"] }
tokio = { version = "*", features = ["full"], optional = true }
zeroize = "*"
dioxus-desktop = "0.7.0"
pyo3 = { version = "*", features = ["extension-module"], optional = true }
log = "*"
env_logger = "*"
wallet-adapter = { path = "C:/SolanaWalletAdapter-zos/crate" }

[[bin]]
name = "deadlock-net-dioxus-app-bin"
path = "src/main.rs"