[package]
name = "deadlock-net-dioxus-app"
version = "0.1.0"
authors = ["deadsg"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = "*"
dioxus = { version = "*", features = ["desktop"] }
tokio = { version = "*", features = ["full"], optional = true }
zeroize = "*"
dioxus-desktop = "*"
pyo3 = { version = "*", features = ["auto-initialize"], optional = true }
log = "*"
env_logger = "*"
wallet-adapter = { path = "C:/SolanaWalletAdapter-zos/crate" }
futures = "0.3.31"

[features]
default = ["pyo3"]
pyo3 = ["dep:pyo3"]
